codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_next_request_notice.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  Would you like to run the following command?

  $ touch /outside/marker

› 1. Yes, proceed (y)
  2. Yes, and don't ask again for commands that start with `touch /outside/
     marker` (p)
  3. No, and tell Corbanu Terminal what to do differently (esc)

  Press enter to confirm or esc to cancel

  This is a new request. Choose an option with ↑/↓ or its key, then enter;
  esc cancels.
