codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_persistent_key_notice.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  Would you like to run the following command?

  $ touch /outside/marker

› 1. Yes, proceed (y)
  2. Yes, and don't ask again for commands that start with `touch /outside/
     marker`
  3. No, and tell Corbanu Terminal what to do differently (esc)

  Options that last beyond this request: choose with ↑/↓, then enter.
  Press enter to confirm or esc to cancel

  That option lasts beyond this request, so its key does not choose it.
  Highlight it with ↑/↓, then press enter; esc cancels.
