codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__approval_overlay__tests__approval_overlay_typed_text_notice.snap
---
source: tui/src/bottom_pane/approval_overlay.rs
expression: "render_overlay_lines(&view, 80)"
---

  Would you like to run the following command?

  $ touch /outside/marker

› 1. Yes, proceed (y)
  2. Yes, and don't ask again for commands that start with `touch /outside/
     marker` (p)
  3. No, and tell Corbanu Terminal what to do differently (esc)

  Press enter to confirm or esc to cancel

  Typed text is not sent while this request is open. Use ↑/↓ and Enter to
  answer, or Esc to cancel. Slash commands such as /permissions work after
  you answer.
